--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <title>KPO</title>
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HelloWorld</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
     <script defer src="main.dart.js"></script>
-  </head>
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+</head>
+
+<body>
+
+    <canvas id="stage" class="stage--fullscreen"></canvas>
+
+</body>
 </html>
